# procwatch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.learnings/: ERRORS.md
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  FEATURE_MATRIX.md  USER_GUIDE.md
scripts/: build_portable.py
src/procwatch/: autostart.py  config.py  database.py  main.py  models.py  monitor.py  services.py  ui.py
tests/: test_config.py  test_database.py  test_monitor.py
