[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procwatch"
version = "0.1.0"
description = "Windows process CPU usage continuous monitor with history charts, tray mode and SQLite history"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "lbbit"}
]
dependencies = [
  "psutil>=5.9.8,<6.0",
  "SQLAlchemy>=2.0.29,<2.1",
  "pydantic>=2.7.1,<3.0",
  "PySide6>=6.7,<6.12; platform_system == 'Windows'",
  "PySide6-Addons>=6.7,<6.12; platform_system == 'Windows'",
  "PySide6-Essentials>=6.7,<6.12; platform_system == 'Windows'",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1,<9.0",
  "pytest-cov>=5.0.0,<6.0",
  "ruff>=0.3.5,<0.5",
  "mypy>=1.9.0,<1.11",
  "types-psutil",
]
windows = [
  "PySide6>=6.7,<6.12",
  "PySide6-Addons>=6.7,<6.12",
  "PySide6-Essentials>=6.7,<6.12",
]

[project.scripts]
procwatch = "procwatch.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
packages = ["procwatch"]
